# fit-dashboard

./: .dockerignore  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeberg-sync.yml  docker.yml
.woodpecker/: docker.yml
docker/: Dockerfile  Dockerfile.web  docker-compose-build.yml  docker-compose.yml  nginx.conf
docs/features/: active-time-chart-axes.md  chart-distance-axis.md  daily-suggested-workouts.md  fit-device-accessory-metadata.md  multisport-deferred.md  multisport-implementation-plan.md  multisport-support.md
scripts/: creds_example.json  import.sh  import_file.sh  import_folder.sh  test_imports.sh
src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: reverse_geocode_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  database.rs  device_metadata.rs  fit_parser.rs  main.rs  models.rs  server.rs  state.rs  tauri_app.rs
src/components/: ActivityChart.tsx  ActivityContributionHeatmap.tsx  ActivityInsights.tsx  ActivityMap.tsx  CompareCharts.tsx  Dashboard.tsx  DatePickerPopover.tsx  DonationBanner.tsx  Onboarding.tsx  OverviewActivityTable.tsx  OverviewLocationMap.tsx  OverviewSportTypeDonut.tsx  OverviewWeeklyTrend.tsx  SettingsPanel.tsx  UnlockScreen.tsx
src/i18n/: de.json  en.json  es.json  fr.json  hu.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  tr.json  (+1 more)
(+14 files in other folders)
